; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tools/tests/MPMMTest/extr_MPMMtest.c_client_work_atom.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tools/tests/MPMMTest/extr_MPMMtest.c_client_work_atom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@client_work_atom.i = internal global i32 0, align 4
@client_pages = common dso_local global i32 0, align 4
@PAGE_SIZE = common dso_local global i32 0, align 4
@client_memory = common dso_local global i64* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @client_work_atom to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @client_work_atom() #0 {
  %1 = load i32, i32* @client_work_atom.i, align 4
  %2 = add nsw i32 %1, 1
  store i32 %2, i32* @client_work_atom.i, align 4
  %3 = sext i32 %2 to i64
  %4 = load i32, i32* @client_pages, align 4
  %5 = load i32, i32* @PAGE_SIZE, align 4
  %6 = mul nsw i32 %4, %5
  %7 = sext i32 %6 to i64
  %8 = udiv i64 %7, 8
  %9 = icmp ugt i64 %3, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %0
  store i32 0, i32* @client_work_atom.i, align 4
  br label %11

11:                                               ; preds = %10, %0
  %12 = load i64*, i64** @client_memory, align 8
  %13 = load i32, i32* @client_work_atom.i, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i64, i64* %12, i64 %14
  store i64 0, i64* %15, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
